<resources>
    <string name="app_name">ESL</string>
    <string name="english_second_language">ENGLISH SECOND LANGUAGE</string>
    <string name="basic">BASIC</string>
    <string name="general">GENERAL</string>
    <string name="academy">ACADEMY</string>
    <string name="press_again_to_exit">Press again to exit!</string>
    <string name="choose_answer_for_all_question">Please choose answer for all questions !</string>
    <string name="unlock">Please upgrade to ProVersion</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="added_to_favorite">Added to Favorite !</string>
    <string name="removed_from_favorite">Removed from Favorite !</string>
    <string name="more_app">More Apps</string>
    <string name="upgrade">UPGRADE</string>
    <string name="subject_mail_feedback">[ESL] Android feedback</string>
    <string name="downloaded">downloaded</string>
    <string name="upgrade_to_pro">UPGRADE TO PRO VERSION</string>
    <string name="unlock_all_lessons">Unlock all lessons</string>
    <string name="remove_ads">Remove ADS</string>


</resources>
