<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="26"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="62"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/btn_lv1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_select_home"
                android:gravity="center"
                android:text="@string/basic"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/common_text_size_39"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_lv2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_select_home"
                android:gravity="center"
                android:text="@string/general"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/common_text_size_39"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_lv3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_select_home"
                android:gravity="center"
                android:text="@string/academy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/common_text_size_39"></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btn_Upgrade"
                android:layout_width="@dimen/common_size_90"
                android:layout_height="@dimen/common_size_30"
                android:layout_marginLeft="@dimen/common_size_35"
                app:cardBackgroundColor="@color/perfect"
                app:cardCornerRadius="@dimen/common_size_6"
                app:cardElevation="@dimen/common_size_3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="updrade"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_text_size_17"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_share"
                    android:layout_width="@dimen/common_size_45"
                    android:layout_height="@dimen/common_size_45"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/common_size_35"
                    android:src="@drawable/share1"
                    app:backgroundTint="@color/colorPrimaryDark" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>