<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_40"
        android:layout_alignParentTop="true"
        android:background="@color/grey1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_to_pro"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_text_size_17"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:paddingTop="@dimen/common_size_40"
        android:paddingBottom="@dimen/common_size_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/common_size_40"
                        android:layout_height="@dimen/common_size_40"
                        android:src="@drawable/unlock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_size_15"
                        android:text="@string/unlock_all_lessons"
                        android:textColor="@color/green"
                        android:textSize="@dimen/common_text_size_18" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"></LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/common_size_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/common_size_40"
                        android:layout_height="@dimen/common_size_40"
                        android:src="@drawable/remove_ads" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_size_15"
                        android:text="@string/remove_ads"
                        android:textColor="@color/green"
                        android:textSize="@dimen/common_text_size_18" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"></LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:background="@color/grey1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_to_pro"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/common_text_size_17"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_size_45"
            android:layout_alignParentBottom="true"
            android:background="@color/grey1"
            android:weightSum="100">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:scaleX="0.95"
                android:text="NO"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/common_text_size_18"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:scaleX="0.95"
                android:text="YES"
                android:textColor="@color/green"
                android:textSize="@dimen/common_text_size_18"
                android:textStyle="bold"></TextView>
        </LinearLayout>
</LinearLayout>